# manga-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/manga_cli/: __init__.py  api.py  main.py
src/manga_cli/tui/: ChapterScreen.py  SearchScreen.py  __init__.py
